Fixed a problem I noticed where the min-height calculations caused a lot of extra white space that pushed the footer down below the bottom of the screen even when there were space for it.

--- a/src/frontend/static/css/components/header.css
+++ b/src/frontend/static/css/components/header.css
@@ -109,6 +109,7 @@ header {
   z-index: 100;
   width: 100%; /* Ensure header takes full width */
   box-sizing: border-box; /* Include padding in width calculation */
+  min-height: 116px;
 }
 
 header:hover {
